--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <p class="fade fade-in fade2">欢迎光临我的社区！</p>
             <p class="fade fade-in fade3">想了解更多，向下滚动哟。</p>
 
-            <a href="#part2" class="btn-home"><img class="img-btn" src="images/arrow.png" alt=""></a>
+            <a class="btn-home btn"><img class="img-btn img" src="images/arrow.png" alt=""></a>
         </div>
     </section>
     <!--关于我页面部分开始-->
@@ -45,23 +45,44 @@
         <div class="section-about">
             <div class="introl">
                 <span class="left-icon"><img src="images/bio-icon-1.png" alt=""></span>
-                <span class="right-content right1"><img src="images/bio-text-1.png" alt=""></span>
+                <span class="right-content " id="right1"><img src="images/bio-text-1.png" alt=""></span>
             </div>
             <div class="introl">
                 <span class="left-icon"><img src="images/bio-icon-2.png" alt=""></span>
-                <span class="right-content right2"><img src="images/bio-text-2.png" alt=""></span>
+                <span class="right-content " id="right2"><img src="images/bio-text-2.png" alt=""></span>
             </div>
             <div class="introl">
                 <span class="left-icon"><img src="images/bio-icon-3.png" alt=""></span>
-                <span class="right-content right3"><img src="images/bio-text-3.png" alt=""></span>
+                <span class="right-content " id="right3"><img src="images/bio-text-3.png" alt=""></span>
             </div>
+            <a href="#part3" class="btn-about btn"><img class="img-about" src="images/arrow.png" alt=""></a>
         </div>
     </section>
     <!--关于我页面部分结束-->
     <!--工作页面部分开始-->
-    <section class="panel works" data-section-name="">
+    <section id="part3" class="panel works" data-section-name="">
         <div class="section-works">
-            ddss
+            <div class="works-item">
+                <a href="###">喜欢我做的东西就关注我吧！</a>
+                <!--<img src="images/works/91zaojia.jpg" alt="">-->
+            </div>
+            <div class="works-item item2">
+                <a href="###">喜欢我做的东西就关注我吧！</a>
+                <!--<img src="images/works/91zaojia.jpg" alt="">-->
+            </div>
+            <div class="works-item item3">
+                <a href="###">喜欢我做的东西就关注我吧！</a>
+                <!--<img src="images/works/91zaojia.jpg" alt="">-->
+            </div>
+            <div class="works-item item4">
+                <a href="###">喜欢我做的东西就关注我吧！</a>
+                <!--<img src="images/works/91zaojia.jpg" alt="">-->
+            </div>
+            <div class="works-item item5">
+                <a href="###">喜欢我做的东西就关注我吧！</a>
+                <!--<img src="images/works/91zaojia.jpg" alt="">-->
+            </div>
+            <a href="###" class="btn-works btn"><img class="img-works img" src="images/arrow.png" alt=""></a>
         </div>
     </section>
     <!--工作页面部分结束-->
@@ -70,6 +91,7 @@
     <script src="js/jquery.easing.1.3.js"></script>
     <script src="js/scrollify.min.js"></script>
     <script src='js/nav.js'></script>
+    <script src='js/jquery.waypoints.js'></script>
     <script src="js/index.js"></script>
 </body>
 
